portfolio Sandra Alonso

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           <a href="index.html">Sandra Alonso</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a href="cases.html">Cases</a>
         </li>
+        
         <li>
           <a href="hello.html">Say hello</a>
         </li>
@@ -75,7 +76,7 @@
       <div class="divider">
         <ul class="lista-home">
           <li>
-            <a href="cases.html">Local e-Commerce</a>
+            <a href="entrada1-ecommerce.html">Local e-Commerce</a>
           </li>
           <li>
             <a href="cases.html">New Feature</a>
